; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_pe_module.c_pe_load_builtin_module.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_pe_module.c_pe_load_builtin_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.module = type { i32 }
%struct.process = type { i32, i64 }
%struct.TYPE_7__ = type { %struct.TYPE_5__, %struct.TYPE_6__ }
%struct.TYPE_5__ = type { i32, i64 }
%struct.TYPE_6__ = type { i32 }

@DMT_PE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.module* @pe_load_builtin_module(%struct.process* %0, i32* %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.process*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.module*, align 8
  %10 = alloca %struct.TYPE_7__, align 8
  store %struct.process* %0, %struct.process** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  store %struct.module* null, %struct.module** %9, align 8
  %11 = load i64, i64* %7, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %47

13:                                               ; preds = %4
  %14 = load %struct.process*, %struct.process** %5, align 8
  %15 = getelementptr inbounds %struct.process, %struct.process* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %47

18:                                               ; preds = %13
  %19 = load %struct.process*, %struct.process** %5, align 8
  %20 = getelementptr inbounds %struct.process, %struct.process* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i64, i64* %7, align 8
  %23 = call i64 @pe_load_nt_header(i32 %21, i64 %22, %struct.TYPE_7__* %10)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %46

25:                                               ; preds = %18
  %26 = load i64, i64* %8, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %25
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  store i64 %31, i64* %8, align 8
  br label %32

32:                                               ; preds = %28, %25
  %33 = load %struct.process*, %struct.process** %5, align 8
  %34 = load i32*, i32** %6, align 8
  %35 = load i32, i32* @DMT_PE, align 4
  %36 = load i32, i32* @FALSE, align 4
  %37 = load i64, i64* %7, align 8
  %38 = load i64, i64* %8, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = call %struct.module* @module_new(%struct.process* %33, i32* %34, i32 %35, i32 %36, i64 %37, i64 %38, i32 %41, i32 %44)
  store %struct.module* %45, %struct.module** %9, align 8
  br label %46

46:                                               ; preds = %32, %18
  br label %47

47:                                               ; preds = %46, %13, %4
  %48 = load %struct.module*, %struct.module** %9, align 8
  ret %struct.module* %48
}

declare dso_local i64 @pe_load_nt_header(i32, i64, %struct.TYPE_7__*) #1

declare dso_local %struct.module* @module_new(%struct.process*, i32*, i32, i32, i64, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
